--- a/views/failure.erb
+++ b/views/failure.erb
@@ -2,15 +2,20 @@
 <head>
 	<title>Unsuccessful</title>
 	<link rel="icon" href="/favicon.ico" type="image/icon">
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/bootstrap.css">
 </head>
 <body>
-	<h1>Access Denied</h1>
 
-	<img src="/cat-guard.jpg" alt="cat guard">
-
-	<p>Please make sure you have the correct username and password.</p>
-
-	<a href="/login">Try again.</a>
+  <div class="total-failure">
+    <div class="jumbotron center custom">
+      <div class="button-centered">
+          <h1>Access Denied</h1>
+          <p>Please make sure you have the correct username and password.</p>
+          <a href="/login" class="btn btn-success btn-lg">Try again</a>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
