--- a/views/success.erb
+++ b/views/success.erb
@@ -2,13 +2,17 @@
 <head>
 	<title>Door Opened!</title>
 	<link rel="icon" href="/favicon.ico" type="image/icon">
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/bootstrap.css">
 </head>
 <body>
-	<h1> The door was opened! </h1>
-
-	<img src="/open-door.jpg" alt="open door">
-
-	<h2>Need to open the door again? You must <a href="/login">log in</a> again.</h2>
-
+  <div class="total-success">
+    <div class="jumbotron center custom">
+      <div class="button-centered">
+        <h1> The door was opened! </h1>
+        <a href="/login" class="btn btn-success btn-lg">Open Door Again</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
